--- a/style.css
+++ b/style.css
@@ -8,6 +8,37 @@
 
 body{
   font-family: 'Inconsolata', monospace;
+  margin: 0rem;
+}
+
+.nav-bar{
+  
+  width: 100%;
+  height: 17vh;
+  background-color: var(--primary-color);
+  border-bottom-left-radius: 1rem;
+}
+.nav-pills{
+  list-style: none;
+  text-align: right;
+}
+.nav-pill-items{
+  font-size: 1.2rem;
+  display:inline;
+  font-weight: bold;
+  padding: 0rem 1.5rem 1.5rem 0rem;
+}
+.link{
+  padding: 0rem 1rem 1rem 0rem;
+  color: var(--secondary-color);
+  text-decoration: none;
+}
+
+.nav-heading{
+  font-size: 1.5rem;
+  padding: 1.5rem;
+  font-weight: bold;
+  color: var(--secondary-color);
 }
 
 .container {
@@ -17,6 +48,7 @@ body{
   font-size: 1.6rem;
 }
 h1{
+  padding-top: 3rem;
   margin: auto;
 }
  label{
@@ -66,4 +98,36 @@ input:focus{
   font-style: italic;
   font-size: 1rem;
   margin: auto;
+}
+
+.footer{
+  margin-top: 9rem;
+  margin-right: 3rem;
+  width: 100%;
+  height: 21vh;
+  background-color: var(--primary-color);
+  border-top-right-radius: 1rem;
+}
+.footer-header{
+  text-align: center;
+  padding: 1.5rem 0rem 0rem ;
+  font-weight: bolder;
+  font-size: 1.5rem;
+  color: var(--secondary-color);
+}
+
+.footer-pills{
+  list-style: none;
+  text-align: center;
+}
+.footer-items{
+  display: inline;
+  padding: 0rem 2.6rem 0rem 0rem;
+}
+.privacy{
+  text-align: center;
+  color: var(--secondary-color);
+}
+.name{
+  color: var(--secondary-color);
 }
