--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 
 body{
+  /* background-image: url(./images/backgroundImage.svg); */
   font-family: 'Inconsolata', monospace;
   margin: 0rem;
 }
@@ -48,10 +49,13 @@ body{
   font-size: 1.6rem;
 }
 h1{
+  display: block;
+  text-align: center;
   padding-top: 3rem;
-  margin: auto;
+  
 }
  label{
+   font-size: 2rem;
   font-weight: bold;
   padding-top: 4rem;
   margin: auto;
@@ -71,10 +75,11 @@ input:focus{
   outline: 1px solid var(--secondary-color);
 }
 .button{
-  padding-top: 1.8rem;
+  padding-top: 2rem;
   margin: auto;
 }
 .check{
+  cursor: pointer;
   font-size: 1.2rem;
   background-color: var(--primary-color);
   padding: 0.8rem;
@@ -84,6 +89,8 @@ input:focus{
   font-weight: bold;
 }
 .clear{
+    margin-left: 2rem;
+    cursor: pointer;
     font-size: 1.2rem;
     background-color: whitesmoke;
     padding: 0.8rem;
@@ -93,6 +100,12 @@ input:focus{
     font-weight: bold;
 }
 .output{
+  padding-top: 2rem;
+  color: var(--error-color);
+  font-size: 1.6rem;
+  margin: auto;
+}
+.error{
   padding-top: 2rem;
   color: var(--error-color);
   font-style: italic;
